--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: Greetings
 
-on: [pull_request, issues]
+on: pull_request
 
 jobs:
   greeting:
@@ -9,5 +9,4 @@ jobs:
     - uses: actions/first-interaction@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thank you so much for contributing to our work!'
         pr-message: 'Thank you for your contribution! Someone will review it ASAP.'
