--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,14 @@
-name: Issue Workflow
-on:
-  issues:
-    types: [opened]
+name: Greetings
+
+on: [pull_request, issues]
+
 jobs:
-  build:
+  greeting:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Greet user
-      run: |
-        curl \
-          -X POST \
-          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-          -H "Accept: application/vnd.github+json" \
-          https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments \
-          -d '{"body":"Hello"}'
+    - uses: actions/first-interaction@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        issue-message: 'Thank you so much for contributing to our work!'
+        pr-message: 'Thank you for your contribution! Someone will review it ASAP.'
 
