--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
-name: Greetings
-
-on: [pull_request, issues]
-
+name: Issue Workflow
+on:
+  issues:
+    types: [opened]
 jobs:
-  greeting:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Thank you so much for contributing to our work!'
-        pr-message: 'Thank you for your contribution! Someone will review it ASAP.'
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Greet user
+      run: echo "Hello"
+
 
