--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Greet user
-      run: echo "Hello"
+      run: |
+        curl \
+          -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github+json" \
+          https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments \
+          -d '{"body":"Hello"}'
+
 
 
