--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
-name: Issue Workflow
+name: Issue and Pull Request Workflow
 on:
   issues:
+    types: [opened]
+  pull_request:
     types: [opened]
 jobs:
   build:
@@ -9,6 +11,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Greet user
+      if: github.event_name == 'issues'
       run: |
         curl \
           -X POST \
@@ -16,6 +19,12 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/comments \
           -d '{"body":"Hello"}'
-
-
-
+    - name: Greet user
+      if: github.event_name == 'pull_request'
+      run: |
+        curl \
+          -X POST \
+          -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          -H "Accept: application/vnd.github+json" \
+          https://api.github.com/repos/${{ github.repository }}/issues/${{ github.event.pull_request.number }}/comments \
+          -d '{"body":"Hello"}'
